--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.5",
         "symfony/maker-bundle": "^1.51",
         "symfony/var-dumper": "6.3.*"
     }
